--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                                         Olá! Meu nome é Eraclio Gabriel Oliveira Lopes, tenho 25 anos de idade e atualmente trabalho como Operador de Sistema em uma empresa de
                                         rastreamento de veículos. Sou apaixonado por jogos eletrônicos, gosto de competir e viciado em ter bons resultados.<br>
                                         </p>
-                                <p id="textosobre2" class="lead recuo well">        
+                                <p id="textosobre2" class="lead recuo well">  
+                                    Estou cursando o 2º período da graduação em Análise e Desenvolvimento de Sistemas na faculdade Estácio. Formado Desenvolvedor JAVA pela instituição do SENAI.
                                     Gosto de estar interado com o avanço tecnologico, evolução dos hardwares, softwares e computadores.
                                     Desde cedo através dos jogos eletrônicos e softwares para computadores despertei a curiosidade em saber como tudo aquilo era produzido e desenvolvido ("Afinal de contas se o programa existe alguém fez... E como foi feito?").
                                 </p>
