--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li><a href="#apresentação">Sobre</a></li>
             <li><a href="#cursos">Cursos</a></li>
             <li><a href="#contatos">Contatos</a></li>
+            <li><a href="#projetos">Projetos</z></li>
         </ul>
     </div>
 </nav>
@@ -59,6 +60,47 @@
         </div>
     </div>
 </div>
+    <a id="projetos"></a>
+<div class="pricing-header text-center">
+<hr>
+<hr>
+    <h2 id="projetos1" class="text-center">Pequenos projetos elaborados</h2>
+    </div>  
+    <div class="calculadora">
+            <h1>Calculadora</h1>
+            <p id="resultado"></p>
+            <table>
+                <tr>
+                    <td><button class="botao" onclick="clean()">C</button></td>
+                    <td><button class="botao" onclick="back()"><</button></td>
+                    <td><button class="botao" onclick="insert('/')">/</button></td>
+                    <td><button class="botao" onclick="insert('*')">X</button></td>
+                </tr>
+                <tr>
+                    <td><button class="botao" onclick="insert('7')">7</button></td>
+                    <td><button class="botao" onclick="insert('8')">8</button></td>
+                    <td><button class="botao" onclick="insert('9')">9</button></td>
+                    <td><button class="botao" onclick="insert('-')">-</button></td>
+                </tr>
+                <tr>
+                    <td><button class="botao" onclick="insert('4')">4</button></td>
+                    <td><button class="botao" onclick="insert('5')">5</button></td>
+                    <td><button class="botao" onclick="insert('6')">6</button></td>
+                    <td><button class="botao" onclick="insert('+')">+</button></td>
+                </tr>
+                <tr>
+                    <td><button class="botao" onclick="insert('1')">1</button></td>
+                    <td><button class="botao" onclick="insert('2')">2</button></td>
+                    <td><button class="botao" onclick="insert('3')">3</button></td>
+                    <td rowspan="2"><button class="botao" style="height: 106px;" onclick="calcular()">=</button></td>
+                </tr>
+                <tr>
+                    <td colspan="2"><button class="botao" style="width: 106px;" onclick="insert('0')">0</button></td>
+                    <td><button class="botao" onclick="insert('.')">.</button></td>
+                </tr>
+            </table>
+        </div>
+    </div>
 <a id="cursos"></a>
 <div class="pricing-header text-center">
 <hr>
