--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="calc.css">
     <link rel="shortcut icon" type="image/png" href="favicon1.ico">
 
 </head>
