--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 <hr>
     <h2 id="projetos1" class="text-center">Pequenos projetos elaborados</h2>
     </div>  
+    <div class="back">
     <div class="calculadora">
             <h1>Calculadora</h1>
             <p id="resultado"></p>
