--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </div>  
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
+            <div class="centered">
                 <div class="panel-group">
                     <div class="panel panel-primary">
                         <div class="panel-heading"><h3 class="text-center">Calculadora Simples</h3></div>
