--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <div class="panel-group">
                     <div class="panel panel-primary">
                         <div class="panel-heading"><h3 class="text-center">Calculadora Simples</h3></div>
-                        <div class="panel-body"><p class="lead well">Calculadora Simples com opção de arrastar para qualquer canto da página utilizando o mouse. Basta clicar no nome <a href="calculadora.html">Calculadora</a></p><br>
+                        <div class="panel-body"><p class="lead well">Projeto calculadora simples com arraste para qualquer canto da tela segurando o botão do mouse. <a href="calculadora.html" target="_blank"> Clique aqui</a> para conferir o projeto.</p><br>
                     </div>
                 </div>
             </div>
