--- a/index.html
+++ b/index.html
@@ -18,18 +18,28 @@
 
 </head>
 <body>
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#"><div class="glyphicon glyphicon-globe"></div></a>
-        <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#apresentação">Sobre</a></li>
-            <li><a href="#cursos">Cursos</a></li>
-            <li><a href="#contatos">Contatos</a></li>
-            <li><a href="#projetos">Projetos</z></li>
-        </ul>
-    </div>
-</nav>
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Menu</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#"><div class="glyphicon glyphicon-globe"></div></a>
+          </div>
+          <div class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#">Início</a></li>
+              <li><a href="#apresentação">Sobre</a></li>
+              <li><a href="#cursos">Conhecimentos</a></li>
+              <li><a href="#projetos">Projetos</a></li>
+              <li><a href="#contatos">Contato</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 <a id="apresentação"></a>
     <div class="container" style="margin-top: 80px">
         <div class="row">    
