Adicionando barra de navegação responsiva com opção de menu sandwich para telas de proporções menores

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="col-md-3">
             <div class="panel-group">
                 <div class="panel panel-primary">
-                    <div class="panel-heading"><h3 class="text-center">Foto perfil</h3></div>
+                    <div class="panel-heading"><h3 class="text-center">Foto perfil Eraclio Gabriel</h3></div>
                     <div class="panel-body"><img src="eraclio.jpg" class="img-responsive img-rounded" alt="Foto de perfil Eraclio"></div>
                 </div>
             </div>
@@ -74,7 +74,7 @@
 <div class="pricing-header text-center">
 <hr>
 <hr>
-<h2 id="titulocursos" class="text-center">Cursos e conhecimentos</h2>
+<h2 id="titulocursos" class="text-center">Cursos e Conhecimentos</h2>
 <hr>
 <hr>
 </div>
