--- a/calculadora.html
+++ b/calculadora.html
@@ -12,7 +12,7 @@
     <div class="fundo">
         <div id="calcdrag" class="calculadora">
             <h1>Calculadora</h1>
-            <p id="resultado"></p>
+            <p id="display"></p>
             <table>
                 <tr>
                     <td><button class="botao" onclick="clean()">C</button></td>
@@ -38,9 +38,11 @@
                     <td><button class="botao" onclick="insert('3')">3</button></td>
                     <td rowspan="2"><button class="botao" style="height: 106px;" onclick="calcular()">=</button></td>
                 </tr>
+
                 <tr>
-                    <td colspan="2"><button class="botao" style="width: 106px;" onclick="insert('0')">0</button></td>
+                    <td><button class="botao" onclick="insert('0')">0</button></td>
                     <td><button class="botao" onclick="insert('.')">.</button></td>
+                    <td><button class="botao" onclick="calculoraiz()">√</button></td>
                 </tr>
             </table>
         </div>
@@ -48,30 +50,39 @@
     <script>
         function insert(num)
         {
-            var numero = document.getElementById('resultado').innerHTML;
-            document.getElementById('resultado').innerHTML = numero + num;
+            var numero = document.getElementById('display').innerHTML;
+            document.getElementById('display').innerHTML = numero + num;
         }
         function clean()
         {
-            document.getElementById('resultado').innerHTML = "";
+            document.getElementById('display').innerHTML = "";
         }
         function back()
         {
-            var resultado = document.getElementById('resultado').innerHTML;
-            document.getElementById('resultado').innerHTML = resultado.substring(0, resultado.length -1);
+            var resultado = document.getElementById('display').innerHTML;
+            document.getElementById('display').innerHTML = resultado.substring(0, resultado.length -1);
         }
         function calcular()
         {
-            var resultado = document.getElementById('resultado').innerHTML;
+            var resultado = document.getElementById('display').innerHTML;
             if(resultado)
             {
-                document.getElementById('resultado').innerHTML = eval(resultado);
+                document.getElementById('display').innerHTML = eval(resultado);
             }
             else
             {
-                document.getElementById('resultado').innerHTML = "Nada..."
+                document.getElementById('display').innerHTML = "Erro"
             }
         }
+        function calculoraiz() {
+            var numero = document.getElementById('display').innerHTML;
+            if (numero >= 0)
+            {
+               document.getElementById('display').innerHTML = Math.sqrt(numero);
+            } else {
+                document.getElementById('display').innerHTML = "Erro"
+            }
+    }
     </script>
     <script>
     
