--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                             <div id="umpoucosobre" class="panel-body"> 
                                 <h2 class="text-center">Quem sou eu</h2></div>
                                 <p id="textosobre" class="lead text-justify recuo well">
-                                        Olá, meu nome é Eraclio Gabriel, tenho 25 anos, atualmente trabalhando como Operador de Sistema de
-                                        rastreamento de veículos e busco através desse projeto pessoal testar minhas habilidades e me desenvolver cada vez mais na área de programação. Sou apaixonado por jogos eletrônicos, gosto de competir e viciado em ter bons resultados.<br>
+                                        Olá, meu nome é Eraclio Gabriel, tenho 27 anos, atualmente trabalhando como Operador de Sistema de
+                                        rastreamento de veículos e busco através desse projeto pessoal desenvolver minhas habilidades na área de programação\n. Sou apaixonado por jogos eletrônicos, gosto de competir e viciado em ter bons resultados.<br>
                                         </p>
                                 <p id="textosobre2" class="lead well">  
-                                    Estou cursando o 2º período do curso de Análise e Desenvolvimento de Sistemas na faculdade Estácio.<br> Formado Desenvolvedor JAVA pela instituição do SENAI em 2021<br> 
+                                    Estou cursando o penúltimo período do curso de Análise e Desenvolvimento de Sistemas na faculdade Estácio.<br> Formado Desenvolvedor JAVA pela instituição do SENAI em 2021<br> 
                                 
                                 </p>
                     </div>
