--- a/calculadora.html
+++ b/calculadora.html
@@ -90,23 +90,44 @@
         dragOfY = 0;
 
     function dragStart(e) {
-        dragOfX = e.touches[0].clientX - dragMe.offsetLeft;
-        dragOfY = e.touches[0].clientY - dragMe.offsetTop;
+        if (e.type === "mousedown") {
+            dragOfX = e.clientX - dragMe.offsetLeft;
+            dragOfY = e.clientY - dragMe.offsetTop;
+        } else if (e.type === "touchstart") {
+            dragOfX = e.touches[0].clientX - dragMe.offsetLeft;
+            dragOfY = e.touches[0].clientY - dragMe.offsetTop;
+        }
 
-        addEventListener("touchmove", dragMove);
-        addEventListener("touchend", dragEnd);
+        if (e.type === "mousedown") {
+            addEventListener("mousemove", dragMove);
+            addEventListener("mouseup", dragEnd);
+        } else if (e.type === "touchstart") {
+            addEventListener("touchmove", dragMove);
+            addEventListener("touchend", dragEnd);
+        }
     }
 
     function dragMove(e) {
-        dragMe.style.left = (e.touches[0].clientX - dragOfX) + 'px';
-        dragMe.style.top = (e.touches[0].clientY - dragOfY) + 'px';
+        if (e.type === "mousemove") {
+            dragMe.style.left = (e.clientX - dragOfX) + 'px';
+            dragMe.style.top = (e.clientY - dragOfY) + 'px';
+        } else if (e.type === "touchmove") {
+            dragMe.style.left = (e.touches[0].clientX - dragOfX) + 'px';
+            dragMe.style.top = (e.touches[0].clientY - dragOfY) + 'px';
+        }
     }
 
-    function dragEnd() {
-        removeEventListener("touchmove", dragMove);
-        removeEventListener("touchend", dragEnd);
+    function dragEnd(e) {
+        if (e.type === "mouseup") {
+            removeEventListener("mousemove", dragMove);
+            removeEventListener("mouseup", dragEnd);
+        } else if (e.type === "touchend") {
+            removeEventListener("touchmove", dragMove);
+            removeEventListener("touchend", dragEnd);
+        }
     }
 
+    dragMe.addEventListener("mousedown", dragStart);
     dragMe.addEventListener("touchstart", dragStart);
 </script>
 </body>
