--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt_BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -52,7 +52,7 @@
             <ul>
                 <li>Email: <a href="mailto:lopes.biel@hotmail.com" target="_blank">Enviar Email</a></li>
                 <li>GitHub: <a href="https://github.com/eracliogabriel" target="_blank">Acessar GitHub</a></li>
-                <li>LinkedIn: <a href="https://linkedin.com/in/eraclioganriel" target="_blank">Acessar Linkedin</a></li>
+                <li>LinkedIn: <a href="https://linkedin.com/in/eracliogabriel" target="_blank">Acessar Linkedin</a></li>
                 <li>Whatsapp: <a href="https://api.whatsapp.com/send?phone=5561999655092&amp" target="_blank">Enviar Mensagem</a></li>
             </ul>
         </section>
