--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
                     <h5 class="mb-1">Painel Hospitalar Automatico</h5>
                     <p class="mb-1">Projeto para conclusão de curso Desenvolvedor JAVA - Senai 2021</p>
                     <p class="mb-1">Sistema de gerenciamento de salas hospitalares com foco em automação.</p>
-                    <small>Tecnologias: Java, Spring Boot, HTML, CSS.</small>
+                    <small>Tecnologias: Java, Spring Boot, HTML, CSS, JPS e JSF.</small>
 					<p><small>Banco de Dados: PostgreSQL.</small></p>
                 </a>
 				<a href="https://eracliogabriel.github.io/calculadora.html" target="_blank" class="list-group-item list-group-item-action">
