--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
         <section id="projetos" class="mb-4">
             <h2>Projetos</h2>
             <div class="list-group">
-                <a href="https://179.214.124.87/hitz" target="_blank" class="list-group-item list-group-item-action">
+                <a href="http://179.214.124.87/hitz" target="_blank" class="list-group-item list-group-item-action">
                     <h5 class="mb-1">Servidor Mu Online Hitz</h5>
 					<h6 class="mb-1">Projeto Ativo</h6>
 					<p class="mb-1">Administrador e Desenvolvedor idealizador do projeto. Responsável por toda estrutura do Site, Servidor e Banco de Dados</p>
@@ -24,7 +24,7 @@
                     <small>Tecnologias: PHP, C++, HTML, CSS.</small>
 					<p><small>Banco de Dados: MSSQL Server 2008 R2.</small></p>
                 </a>
-				<a href="https://lopesgps.masterdaweb.net" target="_blank" class="list-group-item list-group-item-action">
+				<a href="http://lopesgps.ddns.net" target="_blank" class="list-group-item list-group-item-action">
                     <h5 class="mb-1">Sistema de Rastreamento LopesGPS</h5>
 					<h6 class="mb-1">Projeto Ativo</h6>
 					<p class="mb-1">Desenvolvedor e Técnico Instalador</p>
